Use width parameter name