@@ -424,7 +424,7 @@ class ConferenceDataLoaderExecutorTest {
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getResourceNameSpeakersMap(Mockito.anyList()))
                         .thenReturn(Collections.emptyMap());
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getSpeakerLoadResult(
-                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any()))
+                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(), Mockito.anyString()))
                         .thenReturn(new SpeakerLoadResult(
                                 new LoadResult<>(
                                         Collections.emptyList(),
@@ -1200,6 +1200,7 @@ class ConferenceDataLoaderExecutorTest {
         final String PHOTO_FILE_NAME0 = "0000.jpg";
         final String PHOTO_FILE_NAME1 = "0001.jpg";
         final String PHOTO_FILE_NAME2 = "http://valid.com/2.jpg";
+        final String WIDTH_PARAMETER_NAME = "w";
 
         private Stream<Arguments> data() {
             Speaker speaker0 = new Speaker();
@@ -1261,20 +1262,21 @@ class ConferenceDataLoaderExecutorTest {
                             Collections.emptyList()));
 
             return Stream.of(
-                    arguments(Collections.emptyList(), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult0),
-                    arguments(List.of(speaker2), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult1),
-                    arguments(List.of(speaker0), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult2),
-                    arguments(List.of(speaker1), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult3)
+                    arguments(Collections.emptyList(), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult0, WIDTH_PARAMETER_NAME),
+                    arguments(List.of(speaker2), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult1, WIDTH_PARAMETER_NAME),
+                    arguments(List.of(speaker0), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult2, WIDTH_PARAMETER_NAME),
+                    arguments(List.of(speaker1), speakerLoadMaps, new AtomicLong(-1), speakerLoadResult3, WIDTH_PARAMETER_NAME)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
         void getSpeakerLoadResult(List<Speaker> speakers, SpeakerLoadMaps speakerLoadMaps, AtomicLong lastSpeakerId,
-                                  SpeakerLoadResult expected) throws IOException {
+                                  SpeakerLoadResult expected, String imageWidthParameterName) throws IOException {
             try (MockedStatic<ConferenceDataLoaderExecutor> conferenceDataLoaderExecutorMockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.needPhotoUpdate(
-                                Mockito.nullable(ZonedDateTime.class), Mockito.nullable(ZonedDateTime.class), Mockito.nullable(String.class), Mockito.nullable(String.class)))
+                                Mockito.nullable(ZonedDateTime.class), Mockito.nullable(ZonedDateTime.class), Mockito.nullable(String.class),
+                                Mockito.nullable(String.class), Mockito.anyString()))
                         .thenAnswer(
                                 (Answer<Boolean>) invocation -> {
                                     Object[] args = invocation.getArguments();
@@ -1290,7 +1292,8 @@ class ConferenceDataLoaderExecutorTest {
                                     return ((((Speaker) args[0]).getId() == 0) && (((Speaker) args[1]).getId() == 0));
                                 }
                         );
-                conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getSpeakerLoadResult(Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(AtomicLong.class)))
+                conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.getSpeakerLoadResult(
+                                Mockito.anyList(), Mockito.any(SpeakerLoadMaps.class), Mockito.any(AtomicLong.class), Mockito.anyString()))
                         .thenCallRealMethod();
                 conferenceDataLoaderExecutorMockedStatic.when(() -> ConferenceDataLoaderExecutor.findResourceSpeaker(Mockito.any(Speaker.class), Mockito.any(SpeakerLoadMaps.class)))
                         .thenAnswer(
@@ -1302,7 +1305,7 @@ class ConferenceDataLoaderExecutorTest {
                                 }
                         );
 
-                assertEquals(expected, ConferenceDataLoaderExecutor.getSpeakerLoadResult(speakers, speakerLoadMaps, lastSpeakerId));
+                assertEquals(expected, ConferenceDataLoaderExecutor.getSpeakerLoadResult(speakers, speakerLoadMaps, lastSpeakerId, imageWidthParameterName));
             }
         }
     }
@@ -1986,7 +1989,7 @@ class ConferenceDataLoaderExecutorTest {
                     for (LoadResult<List<Talk>> talkLoadResult : List.of(talkLoadResult0, talkLoadResult1, talkLoadResult2, talkLoadResult3)) {
                         for (SpeakerLoadResult speakerLoadResult : List.of(speakerLoadResult0, speakerLoadResult1, speakerLoadResult2, speakerLoadResult3, speakerLoadResult4)) {
                             for (LoadResult<List<Company>> companyLoadResult : List.of(companyLoadResult0, companyLoadResult1)) {
-                                argumentsList.add(arguments(companyLoadResult, speakerLoadResult, talkLoadResult, placeLoadResult, eventLoadResult));
+                                argumentsList.add(arguments(companyLoadResult, speakerLoadResult, talkLoadResult, placeLoadResult, eventLoadResult, "w"));
                             }
                         }
                     }
@@ -2000,13 +2003,15 @@ class ConferenceDataLoaderExecutorTest {
         @MethodSource("data")
         @SuppressWarnings("unchecked")
         void saveFiles(LoadResult<List<Company>> companyLoadResult, SpeakerLoadResult speakerLoadResult, LoadResult<List<Talk>> talkLoadResult,
-                       LoadResult<Place> placeLoadResult, LoadResult<Event> eventLoadResult) {
+                       LoadResult<Place> placeLoadResult, LoadResult<Event> eventLoadResult, String imageWidthParameterName) {
             try (MockedStatic<ConferenceDataLoaderExecutor> mockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
                 mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveFiles(
-                                Mockito.any(LoadResult.class), Mockito.any(SpeakerLoadResult.class), Mockito.any(LoadResult.class), Mockito.any(LoadResult.class), Mockito.any(LoadResult.class)))
+                                Mockito.any(LoadResult.class), Mockito.any(SpeakerLoadResult.class), Mockito.any(LoadResult.class),
+                                Mockito.any(LoadResult.class), Mockito.any(LoadResult.class), Mockito.anyString()))
                         .thenCallRealMethod();
 
-                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveFiles(companyLoadResult, speakerLoadResult, talkLoadResult, placeLoadResult, eventLoadResult));
+                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveFiles(companyLoadResult, speakerLoadResult,
+                        talkLoadResult, placeLoadResult, eventLoadResult, imageWidthParameterName));
             }
         }
     }
@@ -2057,6 +2062,7 @@ class ConferenceDataLoaderExecutorTest {
         private Stream<Arguments> data() {
             UrlFilename urlFilename0 = new UrlFilename("url0", "filename0");
             UrlFilename urlFilename1 = new UrlFilename("url1", "filename1");
+            String WIDTH_PARAMETER_NAME = "w";
 
             SpeakerLoadResult speakerLoadResult0 = new SpeakerLoadResult(
                     new LoadResult<>(
@@ -2079,19 +2085,19 @@ class ConferenceDataLoaderExecutorTest {
                             List.of(urlFilename1)));
 
             return Stream.of(
-                    arguments(speakerLoadResult0),
-                    arguments(speakerLoadResult1)
+                    arguments(speakerLoadResult0, WIDTH_PARAMETER_NAME),
+                    arguments(speakerLoadResult1, WIDTH_PARAMETER_NAME)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void saveImages(SpeakerLoadResult speakerLoadResult) {
+        void saveImages(SpeakerLoadResult speakerLoadResult, String imageWidthParameterName) {
             try (MockedStatic<ConferenceDataLoaderExecutor> mockedStatic = Mockito.mockStatic(ConferenceDataLoaderExecutor.class)) {
-                mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveImages(Mockito.any(SpeakerLoadResult.class)))
+                mockedStatic.when(() -> ConferenceDataLoaderExecutor.saveImages(Mockito.any(SpeakerLoadResult.class), Mockito.anyString()))
                         .thenCallRealMethod();
 
-                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveImages(speakerLoadResult));
+                assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.saveImages(speakerLoadResult, imageWidthParameterName));
             }
         }
     }
@@ -2281,7 +2287,7 @@ class ConferenceDataLoaderExecutorTest {
     @Test
     void logAndCreateSpeakerImages() {
         try (MockedStatic<ImageUtils> mockedStatic = Mockito.mockStatic(ImageUtils.class)) {
-            assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.logAndCreateSpeakerImages(List.of(new UrlFilename("url", "filename")), "{}"));
+            assertDoesNotThrow(() -> ConferenceDataLoaderExecutor.logAndCreateSpeakerImages(List.of(new UrlFilename("url", "filename")), "{}", "w"));
         }
     }
 
@@ -3636,33 +3642,35 @@ class ConferenceDataLoaderExecutorTest {
             final ZonedDateTime YESTERDAY = NOW.minus(1, ChronoUnit.DAYS);
             final String VALID_URL = "https://valid.com";
             final String PHOTO_FILE_NAME = "0000.jpg";
+            final String WIDTH_PARAMETER_NAME = "w";
 
             return Stream.of(
-                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, true, true),
-                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, true, true),
-                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, false, false),
-                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, false, false),
-                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, true, true),
-                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, false, true),
-                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, true, false),
-                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, false, false),
-                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, true, true),
-                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, false, true),
-                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, true, false),
-                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, false, false)
+                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
+                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
+                    arguments(null, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false),
+                    arguments(null, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false),
+                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
+                    arguments(NOW, null, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, true),
+                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, false),
+                    arguments(NOW, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false),
+                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, true),
+                    arguments(NOW, YESTERDAY, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, true),
+                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, true, false),
+                    arguments(YESTERDAY, NOW, VALID_URL, PHOTO_FILE_NAME, WIDTH_PARAMETER_NAME, false, false)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
         void needPhotoUpdate(ZonedDateTime targetPhotoUpdatedAt, ZonedDateTime resourcePhotoUpdatedAt,
-                             String targetPhotoUrl, String resourcePhotoFileName, boolean needUpdate, boolean expected) throws IOException {
+                             String targetPhotoUrl, String resourcePhotoFileName, String imageWidthParameterName,
+                             boolean needUpdate, boolean expected) throws IOException {
             try (MockedStatic<ImageUtils> mockedStatic = Mockito.mockStatic(ImageUtils.class)) {
-                mockedStatic.when(() -> ImageUtils.needUpdate(Mockito.anyString(), Mockito.anyString()))
+                mockedStatic.when(() -> ImageUtils.needUpdate(Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
                         .thenReturn(needUpdate);
 
                 assertEquals(expected, ConferenceDataLoaderExecutor.needPhotoUpdate(targetPhotoUpdatedAt, resourcePhotoUpdatedAt,
-                        targetPhotoUrl, resourcePhotoFileName));
+                        targetPhotoUrl, resourcePhotoFileName, imageWidthParameterName));
             }
         }
     }
